# led_analyzer

./: .build.sh  .build_lua.sh  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  README.asciidoc  builder.bat  circle.yml  copy_led_analyzer.bat  maker.bat  tester.bat  tester_builder for swigtest 32.bat  tester_builder for swigtest 64.bat  tester_builder for swigtest.bat
CoCoApp/: .build.sh  CMakeLists.txt  CMakeLists.txt~  coco_app.cbp  coco_app.layout  configure - Kopie.bat  configure.bat  main.cpp  main.h
ColorControl/: CMakeLists.txt  ColorControl.cbp  ColorControl.depend  ColorControl.layout  ColorControlApp.cpp  ColorControlApp.h  ColorControlMain.cpp  ColorControlMain.h  GUIFrame.cpp  GUIFrame.h  WxWizFrame.fbp  backup_17_06.fbp  resource.rc
ColorControl/include/: CDevice.h  CLua.h  CSensorData.h  CTestGeneration.h  CView.h  ColorControlMain.h  GUIFrame.h  PanelSensor.h  PanelTestrow.h  logo_hilscher.xpm
ColorControl/lua/: color_control.lua
ColorControl/pic/: logo_hilscher.xpm
ColorControl/src/: CDevice.cpp  CLua.cpp  CSensorData.cpp  CTestGeneration.cpp  CView.cpp  ColorControlApp.cpp  ColorControlMain.cpp  Config.h.in  GUIFrame.cpp  PanelSensor.cpp  PanelTestrow.cpp  logo_hilscher_cut.c
cmake/: versions.cmake
driver/linux/: 40-hilscher-coco.rules  __README__.txt
installer/ivy/: CMakeLists.txt  CMakeLists.txt~
installer/ivy/led_analyzer/: CMakeLists.txt  CMakeLists.txt~  install.xml  ivy.xml
ivy/dependencies/: ivy.xml  ivysettings.xml  path.properties
ivy/installer/: CMakeLists.txt  CMakeLists.txt~
ivy/installer/coco_gui/: artifacts_coco_gui.xml  build.xml  ivy.xml  ivysettings.xml
ivy/installer/led_analyzer/: CMakeLists.txt  CMakeLists.txt~  install.xml  ivy.xml
ivy/installer/org.muhkuh.tools-coco/: CMakeLists.txt  install.xml  ivy.xml
lua/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lua/lib/lua-5.1.4/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
modules/: CMakeLists.txt
modules/led_analyzer/: 1931_chromaTable.lua  CMakeLists.txt  color_control.lua  color_control_init.lua  color_conversions.lua  color_validation.lua  doc_runme.txt  i2c_routines.c  i2c_routines.h  io_operations.c  io_operations.h  led_analyzer.c  led_analyzer.h  led_analyzer.i  led_analyzerLUA_wrap.c  main.lua  muhkuh_cli_init.lua  runme.lua  sleep_ms.h  tcs3472.c  tcs3472.h  tcs_chromaTable.lua  test_param.h  testboard.lua
modules/led_analyzer/asciidoc/: LED_Tester.html  LED_Tester.txt
modules/led_analyzer/example device/: FTDI_ledBoard.lua  testboard.lua  testset1_red.lua  testset2_green.lua  testset3_yellow.lua
modules/led_analyzer/example_device/: netx56_generated.lua
modules/led_analyzer/lua/: color_control.lua  color_conversions.lua  generate_xml.lua  io_matrix.lua  tcs_chromaTable.lua  tester_cli.lua
muhkuh_demo/: test_description.xml
testbin/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
