cmake_minimum_required(VERSION 2.8)

PROJECT("led_analyzer")

INCLUDE(ExternalProject)


GET_FILENAME_COMPONENT(COCO_WIN32_INSTALL "../../build_windows32" ABSOLUTE)
GET_FILENAME_COMPONENT(COCO_WIN64_INSTALL "../../build_windows64" ABSOLUTE)
GET_FILENAME_COMPONENT(LED_ANALYZER_LUA "../../modules/led_analyzer" ABSOLUTE)


# Led_Analyzer Version number
SET(CPACK_PACKAGE_VERSION_MAJOR 0)
SET(CPACK_PACKAGE_VERSION_MINOR 1)
SET(CPACK_PACKAGE_VERSION_PATCH 0)
SET(VERSION_FULL ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})


SET(PACKAGE_CMAKE_ARGS "")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DCOCO_WIN32_INSTALL=${COCO_WIN32_INSTALL}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DCOCO_WIN64_INSTALL=${COCO_WIN64_INSTALL}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DLED_ANALYZER_LUA=${LED_ANALYZER_LUA}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DCPACK_PACKAGE_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DCPACK_PACKAGE_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DCPACK_PACKAGE_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DVERSION_FULL=${VERSION_FULL}")
LIST(APPEND PACKAGE_CMAKE_ARGS "-DARTIFACT_LISTS_OUTPUT=${CMAKE_CURRENT_BINARY_DIR}/artifacts")

ExternalProject_Add(TARGET_led_analyzer
                    SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/led_analyzer
                    CMAKE_ARGS ${PACKAGE_CMAKE_ARGS}
                    INSTALL_COMMAND make package
)

# Create a copy of the artifacts without a version number in the filename.
# This allows easy deploy to GitHub.
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/TARGET_lua-prefix/src/TARGET_lua-build/lua-${CPACK_PACKAGE_VERSION_MAJOR}.#${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}.zip
#        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
#        RENAME lua.zip)
#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/TARGET_lua-prefix/src/TARGET_lua-build/ivy-${CPACK_PACKAGE_VERSION_MAJOR}.#${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}.xml
#        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
#        RENAME ivy.xml)

#----------------------------------------------------------------------------

